--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<div class = 'header'>
+		<h2> Shaw's News</h2>
+	</div>
+		<div class = "content">
+	<div class = "Latest-news-section">
+		<h2> Latest News Articles</h2>
+		<ul>
+			<li>Article 1</li>
+			<li>Article 2</li>
+			<li>Article 3</li>
+		</ul>
+	</div>
+		<div class = "main-section">
+			<h2>Main Article</h2>
+			<p>Loreum ipsum dolor sit amet ,consceuluer </p>
+		</div>
+			<div class = "pictorial-news-section">
+				<h2> Pictorial News</h2>
+				<img  class = "img" src = " https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"/>
+				<img  class = "img" src = "https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"/>
+				<img  class = "img" src = " https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"/>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
