--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<h2> Shaw's News</h2>
 	</div>
 		<div class = "content">
-	<div class = "Latest-news-section">
+	<div class = "latest-news-section">
 		<h2> Latest News Articles</h2>
 		<ul>
 			<li>Article 1</li>
