--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<div class = 'header'>
+	<header class = 'header'>
 		<h2> Shaw's News</h2>
-	</div>
+	</header>
 		<div class = "content">
 	<div class = "latest-news-section">
 		<h2> Latest News Articles</h2>
